unpackaged/main/default/objects/Managed_Services_Contract__c/Managed_Services_Contract__c.object-meta.xml
<CustomObject>
    <label>Managed Services Contract</label>
    <nameField>
        <displayFormat>MSC-{000000}</displayFormat>
        <label>Managed Services Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Contract</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>