unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Billing_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_State_Zip__c</fullName>
    <formula>Opportunity__r.Account.BillingCity + " " +  Opportunity__r.Account.BillingState + ", " + Opportunity__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City/State/Zip</label>
    <type>Text</type>
</CustomField>