unpackaged/main/default/objects/Managed_Services_Contract__c/fields/C_C_Value__c.field-meta.xml
<CustomField>
    <fullName>C_C_Value__c</fullName>
    <formula>Contract_Value_Per_Day__c  *  Remaining_Contract_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>