unpackaged/main/default/objects/Managed_Services_Contract__c/fields/CCE__c.field-meta.xml
<CustomField>
    <fullName>CCE__c</fullName>
    <formula>TEXT(Opportunity__r.AnyWare_Funding_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCE</label>
    <type>Text</type>
</CustomField>