unpackaged/main/default/objects/Managed_Services_Contract__c/fields/CCE_Balance__c.field-meta.xml
<CustomField>
    <fullName>CCE_Balance__c</fullName>
    <label>CCE Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>