unpackaged/main/default/objects/Managed_Services_Contract__c/fields/CCE_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>CCE_Last_Update__c</fullName>
    <label>CCE Last Update</label>
    <type>Date</type>
</CustomField>