unpackaged/main/default/objects/Managed_Services_Contract__c/fields/CCE_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>CCE_Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>CCE Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>