unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contact_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Contact_E_Mail__c</fullName>
    <formula>Contract_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact E-Mail</label>
    <type>Text</type>
</CustomField>