unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <formula>Contract_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Fax</label>
    <type>Text</type>
</CustomField>