unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contract_Counter__c.field-meta.xml
<CustomField>
    <fullName>Contract_Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>