unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contract_Days__c.field-meta.xml
<CustomField>
    <fullName>Contract_Days__c</fullName>
    <formula>Contract_End_Date__c - Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>