unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contract_Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Execution_Type__c</fullName>
    <label>Contract Execution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Opportunity Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>