unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contract_Funding_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Contract_Funding_Reserve__c</fullName>
    <label>Contract Funding Reserve</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>