unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contract_Net_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Net_Funding_Amount__c</fullName>
    <formula>Current_Contract_Value__c -  Contract_Funding_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Net Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>