unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Services &amp; Support</fullName>
            </value>
            <value>
                <fullName>Support Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>