unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Contract_Value_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_Per_Day__c</fullName>
    <formula>O_C_Value__c /  Contract_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Value Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>