unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Current_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Value__c</fullName>
    <formula>Total_Monthly_Payment__c /  Remaining_Term_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Contract Value (Funding)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>