unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Federal_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Id__c</fullName>
    <formula>Opportunity__r.Account.Federal_Tax_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Federal Tax Id #</label>
    <type>Text</type>
</CustomField>