unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Capital</fullName>
            </value>
            <value>
                <fullName>Ipro Media</fullName>
            </value>
            <value>
                <fullName>Texas Star Bank</fullName>
            </value>
            <value>
                <fullName>Great America</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>