unpackaged/main/default/objects/Managed_Services_Contract__c/fields/O_C_Value__c.field-meta.xml
<CustomField>
    <fullName>O_C_Value__c</fullName>
    <formula>Total_Monthly_Payment__c *  Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>