unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Remaining_Contract_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Contract_Days__c</fullName>
    <formula>Contract_End_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Contract Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>