unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Remaining_Term__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term__c</fullName>
    <formula>IF( Term_Flag__c = True, Term__c , ROUND(Remaining_Contract_Days__c /31,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>