unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Shipping_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_State_Zip__c</fullName>
    <formula>Opportunity__r.Account.ShippingCity + " " +  Opportunity__r.Account.ShippingState + "' " +  Opportunity__r.Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City/State/Zip</label>
    <type>Text</type>
</CustomField>