unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <formula>Opportunity__r.Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>