unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <formula>Opportunity__r.Account.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Street</label>
    <type>Text</type>
</CustomField>