unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Term_Flag__c.field-meta.xml
<CustomField>
    <fullName>Term_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term Flag</label>
    <type>Checkbox</type>
</CustomField>