unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Total_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Payment__c</fullName>
    <formula>If(ispickval(Contract_Type__c,'Equipment'), Opportunity__r.AnyWare_CPE_Total__c ,
If(ispickval(Contract_Type__c, 'Services &amp; Support'),
Opportunity__r.AnyWare_Services_Total__c ,
If(ispickval(Contract_Type__c, 'Support Only'), 
Opportunity__r.AnyWare_Monthly_Total__c ,
0.00)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>