unpackaged/main/default/objects/Managed_Services_Contract__c/fields/Verified_Count__c.field-meta.xml
<CustomField>
    <fullName>Verified_Count__c</fullName>
    <formula>IF( Verified__c  = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>