unpackaged/main/default/objects/Managed_Services_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>CCE__c</columns>
    <columns>CCE_Reference_Number__c</columns>
    <columns>NAME</columns>
    <columns>Funding_Source__c</columns>
    <columns>C_C_Value__c</columns>
    <columns>Term__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Contract_Days__c</columns>
    <columns>Remaining_Contract_Days__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>